--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "travel-diary",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^4.4.1",
-    "@next/font": "13.2.4",
-    "aws-amplify": "^5.0.22",
-    "daisyui": "^2.51.5",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
-  }
+	"name": "travel-diary",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"codegen": "cd graphql && npx @aws-amplify/cli@latest codegen && cd .."
+	},
+	"dependencies": {
+		"@aws-amplify/ui-react": "^5.0.0",
+		"@aws-amplify/ui-react-storage": "^2.0.0",
+		"@next/font": "13.2.4",
+		"aws-amplify": "^5.2.5",
+		"daisyui": "^3.0.20",
+		"next": "13.2.4",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.7"
+	}
 }
